// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesSection component should render default view 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "additionalNotes",
          ],
        ],
        "title": "Additional notes",
      },
      {
        "groups": [
          [
            "internalNotes",
          ],
        ],
        "title": "Internal notes",
      },
      {
        "groups": [
          [
            "rek_ci_notice_attribution_incomplete",
          ],
        ],
        "title": "Cultural Institute (CI) Notice",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`NotesSection component should render disabled view 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "additionalNotes",
          ],
        ],
        "title": "Additional notes",
      },
      {
        "groups": [
          [
            "internalNotes",
          ],
        ],
        "title": "Internal notes",
      },
      {
        "groups": [
          [
            "rek_ci_notice_attribution_incomplete",
          ],
        ],
        "title": "Cultural Institute (CI) Notice",
      },
    ]
  }
  disabled={true}
/>
`;
